--- a/template.yaml
+++ b/template.yaml
@@ -14,13 +14,14 @@ Globals:
         URLS_TABLE: !Ref DynamoUrlsTable
         DB_ENDPOINT: http://dynamodb.us-west-2.amazonaws.com
         REGION_NAME: us-west-2
+        PYTHON_PATH: lambdas/
 
 Resources:
   HelloWorldFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
-      CodeUri: hello_world/
-      Handler: app.lambda_handler
+      CodeUri: lambdas/
+      Handler: app.redirect_lambda_handler
       Policies: AmazonDynamoDBFullAccess
       Runtime: python3.7
       Events:
